# fixed-vector

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog  README.markdown  cabal.project  extract.sh  fixed-vector.cabal  test-package.sh
.github/workflows/: ci.yml
Data/Vector/: Fixed.hs
Data/Vector/Fixed/: Boxed.hs  Cont.hs  Generic.hs  Internal.hs  Monomorphic.hs  Mutable.hs  Primitive.hs  Storable.hs  Unboxed.hs
Data/Vector/Fixed/Internal/: Arity.hs  Id.hs
fixed-vector/: ChangeLog  ChangeLog.md  FOO16.hs  FOO4.hs  FOO8.hs  fixed-vector.cabal
fixed-vector-QC/: fixed-vector-QC.cabal
fixed-vector-QC/Data/Vector/Fixed/Instances/: QuickCheck.hs
fixed-vector-aeson/: ChangeLog.md  fixed-vector-aeson.cabal
fixed-vector-aeson/Data/Vector/Fixed/Instances/: Aeson.hs
fixed-vector-binary/: ChangeLog  ChangeLog.md  fixed-vector-binary.cabal
fixed-vector-binary/Data/Vector/Fixed/Instances/: Binary.hs
fixed-vector-binary/test/: QC.hs
fixed-vector-cborg/: ChangeLog  ChangeLog.md  fixed-vector-cborg.cabal
fixed-vector-cborg/Data/Vector/Fixed/Instances/: CBOR.hs
fixed-vector-cborg/test/: QC.hs
fixed-vector-cereal/: fixed-vector-cereal.cabal
fixed-vector-cereal/Data/Vector/Fixed/Instances/: Cereal.hs
fixed-vector-cereal/test/: QC.hs
fixed-vector-test/: fixed-vector-test.cabal
fixed-vector-test/test/: main.hs
fixed-vector-test/test/TST/: Aeson.hs  Binary.hs  CBOR.hs  Cereal.hs  Util.hs
fixed-vector/Data/Vector/: Fixed.hs
fixed-vector/Data/Vector/Fixed/: Boxed.hs  Compat.hs  Cont.hs  Generic.hs  Internal.hs  Mono.hs  Monomorphic.hs  Mutable.hs  Nat.hs  Primitive.hs  Storable.hs  Strict.hs  Unboxed.hs
fixed-vector/test/: Doctests.hs  inspect.hs
fixed-vector/test/Inspect/: Obligations.hs
fixed-vector/test/optimization/: fuse-mapM.hs  fuse-mk.hs  fuse-simple.hs  fuse-zipWith.hs  run.sh
test/: Doctests.hs
test/optimization/: fuse-mk.hs
