Name:           fixed-vector
Version:        0.3.0.0
Synopsis:       Generic vectors with fixed length
Description:
  Generic vectors with fixed length. Package is structured as follows:
  .
  [@Data.Vector.Fixed@]
  Generic API. It's suitable for both ADT-based vector like @Complex@
  and array-based ones.
  .
  [@Data.Vector.Fixed.Cont@]
  Continuation based vectors. Internally all functions use them.
  .
  [@Data.Vector.Fixed.Mutable@]
  Type classes for array-based implementation and API for working with
  mutable state.
  .
  [@Data.Vector.Fixed.Unboxed@]
  Unboxed vectors.
  .
  [@Data.Vector.Fixed.Boxed@]
  Boxed vector which can hold elements of any type.
  .
  [@Data.Vector.Fixed.Storable@]
  Unboxed vectors of @Storable@  types.
  .
  [@Data.Vector.Fixed.Primitive@]
  Unboxed vectors based on pritimive package.
  .
  Changes in 0.3.0.0
  .
  * Indexing function restored.
  .
  * @unfoldr@ added.
  .
  Changes in 0.2.0.0
  .
  * Continuation-based vector added.
  .
  * Right fold added.
  .
  * @tailWith@, @convertContinuation@, and @!@ from
    @Data.Vector.Fixed@ removed.
  .
  * @Vector@ instance for tuples added.
  .
  Changes in 0.1.2
  .
  * @imap@, @imapM@, @ifoldl@, @ifoldM@, @zipWithM@, @izipWithM@
    functions are added.
  .
  * @VectorN@ type class added.
  .
  Changes in 0.1.1
  .
  * @foldM@ and @tailWith@ added. Type synonyms for numbers up to 6 are
    added. @Fun@ is reexported from @Data.Vector.Fixed@.


Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/fixed-vector
source-repository head
  type:     git
  location: http://github.com/Shimuuar/fixed-vector

Library
  Ghc-options:          -Wall
  Build-Depends:
    base >=3 && <5,
    primitive
  Exposed-modules:
    -- API
    Data.Vector.Fixed.Internal.Arity
    Data.Vector.Fixed.Cont
    Data.Vector.Fixed
    -- Arrays
    Data.Vector.Fixed.Mutable
    Data.Vector.Fixed.Boxed
    Data.Vector.Fixed.Primitive
    Data.Vector.Fixed.Unboxed
    Data.Vector.Fixed.Storable
  Other-modules:
    Data.Vector.Fixed.Internal

Test-Suite doctests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        Doctests.hs
  Build-Depends:
    base >=3 && <5,
    primitive,
    -- Additional test dependencies.
    doctest   == 0.9.*,
    filemanip == 0.3.6.*
