Name:           fixed-vector-binary
Version:        2.1.0.0
Synopsis:       Binary instances for fixed-vector
Description:
  This package contains Binary instances for data types defined in
  fixed-vector package.
  
Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

tested-with:
    GHC ==9.4.7
     || ==9.6.7
     || ==9.8.4
     || ==9.10.2
     || ==9.12.2
     || ==9.14.1

source-repository head
  type:     git
  location: http://github.com/Shimuuar/fixed-vector

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends:        base         >=4.16 && <5
                      , fixed-vector >=2.1
                      , binary
  Exposed-modules:
    Data.Vector.Fixed.Instances.Binary
