Name:           fixed-vector-cborg
Version:        1.0.0.2
Synopsis:       Binary instances for fixed-vector
Description:
  CBOR serialization instances for fixed-vector's types. Generic
  serialization functions are proviede as well
  
Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

tested-with:
    GHC ==7.10.3
     || ==8.0.2
     || ==8.2.2
     || ==8.4.4
     || ==8.6.5
     || ==8.8.1

source-repository head
  type:     git
  location: http://github.com/Shimuuar/fixed-vector

Library
  Ghc-options:          -Wall
  Build-Depends: base         >=4.8 && <5
               , fixed-vector >=1.0
               , cborg
               , serialise
  Exposed-modules:
    Data.Vector.Fixed.Instances.CBOR

Test-Suite test
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        QC.hs
  Build-Depends:
    base >=3 && <5,
    fixed-vector,
    fixed-vector-cborg,
    serialise,
    tasty,
    tasty-quickcheck
