Name:           fixed-vector-cborg
Version:        2.0.0.0
Synopsis:       Binary instances for fixed-vector
Description:
  CBOR serialization instances for fixed-vector's types. Generic
  serialization functions are proviede as well
  
Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

tested-with:
    GHC ==8.10.7
     || ==9.0.1
     || ==9.2.8
     || ==9.4.7
     || ==9.6.6
     || ==9.8.2
     || ==9.10.1

source-repository head
  type:     git
  location: http://github.com/Shimuuar/fixed-vector

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends: base         >=4.14 && <5
               , fixed-vector >=2.0
               , cborg
               , serialise
  Exposed-modules:
    Data.Vector.Fixed.Instances.CBOR
