Name:           fixed-vector-test
Version:        1.0.0.2
Synopsis:       Tests fixed-vector
Description:
  All tests for instance packages are moved to separate package in order to
  simplify maintenance

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple

Test-Suite fixed-vector-test
  Ghc-options:      -Wall
  Default-Language: Haskell2010
  Default-Extensions:
        DataKinds
        TypeApplications
        ScopedTypeVariables
        RankNTypes
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        main.hs
  Other-modules:  TST.Cereal
                  TST.Binary
                  TST.CBOR
                  TST.Aeson
                  TST.Util
  Build-Depends:  base >=3 && <5
                , fixed-vector
                , fixed-vector-QC
                , fixed-vector-aeson
                , fixed-vector-binary
                , fixed-vector-cborg
                , fixed-vector-cereal
                --
                , template-haskell
                , aeson
                , cereal
                , binary
                , tasty
                , serialise
                , tasty-quickcheck
