Name:           fixed-vector-test
Version:        2.0.0.0
Synopsis:       Tests fixed-vector
Description:
  All tests for instance packages are moved to separate package in order to
  simplify maintenance

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple

Test-Suite fixed-vector-test
  Ghc-options:      -Wall
  Default-Language: Haskell2010
  Default-Extensions:
        DataKinds
        TypeApplications
        ScopedTypeVariables
        RankNTypes
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is:        main.hs
  Other-modules:  TST.Cereal
                  TST.Binary
                  TST.CBOR
                  TST.Aeson
                  TST.Util
  Build-Depends:  base >=4.14 && <5
                , fixed-vector        >=2
                , fixed-vector-QC     >=2
                , fixed-vector-aeson  >=2
                , fixed-vector-binary >=2
                , fixed-vector-cborg  >=2
                , fixed-vector-cereal >=2
                --
                , template-haskell
                , aeson
                , cereal
                , binary
                , tasty
                , serialise
                , tasty-quickcheck
